Finished the staff page.

--- a/content/staff.slim
+++ b/content/staff.slim
@@ -1,10 +1,11 @@
 Menu: Docs
-Title: Documentation - Image Resizer V3
+Title: Staff Page
+Libs: -comments
 Icon: coffee
 
 h1 Meet the Staff
 
-.row-fluid
+.row
   .title
     h2 Nathanael Jones
   .span8
@@ -12,17 +13,17 @@ h1 Meet the Staff
     markdown:
       Nathanael Jones is a software engineer, husband, consultant, and computer linguist with unreasonably high expectations of inanimate objects. He refines .NET, ruby, and javascript libraries full-time at Imazen, but can often be found on stack overflow or participating in W3C community groups.
   .span4
-    /Picture will go here
-.row-fluid
+    img src="http://img.imageresizing.net/s3/resizer-images/ndj1.jpg?width=200"
+.row
   .title
     h2 Liz Certa
   .span8
     h3 Code name: The Spy
     markdown:
-      Until very, *very* recently, Liz was a student of the English language on her way toward a life in academia. She is currently living in an alternate universe where she designs websites and answers IT questions instead. Liz dreads the day when the comic-book overlords that wrote this story (she hopes they're Marvel) merge the universes and she has to fight canon Liz.
+      Until very, *very* recently, Liz was a student of the English language on her way toward a life in academia. She is currently living in an alternate universe where she designs websites and answers IT questions instead. Liz dreads the day when her comic book writers merge the universes and she has to fight canon Liz. 
   .span4
-    /picture will go here
-.row-fluid
+    img src="http://img.imageresizing.net/s3/resizer-images/me-at-alices.jpg?width=200"
+.row
   .title
     h2 Dale Ragan
   .span8
@@ -32,13 +33,4 @@ h1 Meet the Staff
 
       Dale's favorite muppet is Beaker.
   .span4
-    /picture will go here
-.row-fluid
-  .title
-    h2 Accountant Lady
-  .span8
-    h3 Code name: The Miracle Worker
-    markdown:
-      Blah blah blah
-  .span4
-    /picture will go here
+    img src="http://img.imageresizing.net/s3/resizer-images/dale.jpg?width=200"
