Fixed a dead link

--- a/content/docs/index.slim
+++ b/content/docs/index.slim
@@ -57,7 +57,7 @@ markdown:
       li: a href="/docs/troubleshoot" Troubleshooting Guide
       li: a href="/support" Support
       li: a href="/docs/geterror" Getting detailed error messages
-      li: a href="/plugin/diagnostics" Accessing self-diagnostics
+      li: a href="/plugins/diagnostics" Accessing self-diagnostics
       li: a href="/docs/install/classicmode" Running on IIS6 or IIS7 Classic Mode
       li: a href="/docs/howto/avoid-network-limit" SAN & NAS Storage - avoid the Network BIOS limit reached error message
 
