Touched up the Download page

--- a/content/download.slim
+++ b/content/download.slim
@@ -56,10 +56,10 @@ h1 Download ImageResizer
   .span8
     h3 style="margin-bottom:0"
       |We have a variety of licenses to suit any developer's needs.
-    p.home3 style="margin:0"
+    p.home3.bottompadding style="margin:0"
       a href="/licenses" class="btn btn-primary"
         | Licenses Page
-    p style="padding-top: 5px"
+    /p style="padding-top: 5px"
       |Not sure which license fits your needs?  
       a href="/license-questions" Answer a few questions 
       | and we'll find the license that's right for you.
