Added a picture to the tutorials option and activated its link.

--- a/content/home3.slim
+++ b/content/home3.slim
@@ -125,6 +125,12 @@ hr
           p
             |Our clients never cease to amaze us with the creative uses they have found for ImageResizer. Check out some of our customers' homepages and see for yourself.
       .span3
+        a.block.plaintext.color href="/docs/tutorials"
+          img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/tutorials2.png?width=250"
+            h3 Tutorials
+            p
+              |Either watch a screencast or read a page to see ImageResizer in action.
+      .span3
         a.block.plaintext.color href="/docs/benefits/testimonials"
           img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/testimonials.png?width=250"
             h3 Testimonials
@@ -136,14 +142,6 @@ hr
             h3 Community
             p
               |We never stop working to make ImageResizer better, but we get a lot of help. Check out some of the work our awesome, dedicated, and expansive community has made.
-      .span3
-        a.block.plaintext.color href="/docs/community"
-          img src="http://z.zr.io/ri/3s.jpg?height=200"
-            h3 Tutorials
-            p
-              |Either watch a screencast or read a page to see ImageResizer in action.
-            /This will have to link to something new. Zebra.
-            /Get a picture of a video pre-watching screen. Zebra.
   container
     .oddhomepageitem
       h1.headerpadding.home3
