--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -242,6 +242,7 @@ span.imagespacer{
   vertical-align: middle;
   font-size: 10pt;
   padding-top: 15px;
+  margin-top:1em;
 }
 .statsnumber{
   font-size: 28pt;
@@ -271,4 +272,8 @@ span.imagespacer{
 }
 a.block.plaintext.color:hover{
   background-color: #EBFAFF;
+}
+
+#page-title h2.no-icon{
+  padding-left:0;
 }
