--- a/content/home3.slim
+++ b/content/home3.slim
@@ -3,7 +3,7 @@ Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open S
 Libs: uservoice, plusone, -comments
 Flags: unwrap
 Layout: layout
-Icon: picture
+Icon: none
 
 h1 ASP.NET library and image server
 
@@ -25,7 +25,7 @@ h1 ASP.NET library and image server
       |  is dead; embrace the responsive web.
     .row style="padding:6px"
       a href="download" class="btn btn-buynow"
-        | Download
+        | Add ImageResizer to your app in under 30 seconds
 
 .home3.statsbar
   .container
