Changed the "Get Architecture Planning" line to "Get a support contract" instead.

--- a/content/download.slim
+++ b/content/download.slim
@@ -74,8 +74,8 @@ h1 Download ImageResizer
       |We take our commitment to deliver high-quality, easy-to-use software very seriously. Here are some ways you can guarantee you're getting the most out of our product.
     ul.arrow_list
       li
-        a href="/docs/install" Set up an architecture planning session. 
-        |In thirty minutes, we will help you design the ideal architecture to ensure you meet your performance, quality, scalability, and cost goals.
+        a href="/support/contracts" Get a support contract.
+        |To make sure you're getting maximum usage and minimal misunderstanding from ImageResizer, we recommend a support contract. Some amenities include architecture planning, preventative consultation, emergency incident support, and custom development for your business's unique needs.
       li
         a href="/docs/basics" Learn the basics. 
         |Spend a few minutes learning the ropes before you get started making beautiful, functional, responsive websites in half the time.      
@@ -89,7 +89,6 @@ h1 Download ImageResizer
         |It's only happened once (a long time ago), but if there is a security-related bug, this is how we let you know. 
         strong Extremely low-volume.
   .span2
-/Find a way to make the architecture planning thing link to th uservoice email message thing. zebra.
 
 / Google Code for View download page Conversion Page
 javascript:
