--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -25,7 +25,7 @@ html(lang="en" class="no-js")
     /   link href="/css/twentytwenty.css" rel="stylesheet"
     / link href="/css/less/parallax-slider.css" rel="stylesheet"
 
-    link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Economica:700,400italic|Droid+Serif|Boogaloo'
+    link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Economica:700,400italic|Droid+Serif|Boogaloo|Source+Code+Pro:500'
 
     /[if IE 9]
       link href="/css/less/styleie9.css" rel="stylesheet"
@@ -41,6 +41,9 @@ html(lang="en" class="no-js")
 
     - if page.lib? :textillate
       link rel="stylesheet" href="/css/less/animate.css"
+
+    - if page.lib? :prism
+      link rel="stylesheet" href="/css/less/prism.css"
 
     link href="/atom.xml" rel="alternate" type="application/atom+xml"
 
@@ -85,7 +88,8 @@ html(lang="en" class="no-js")
       script src="/js/slider.js"
       script src="/js/jquery.fancybox.js"
 
-      script src="/js/highlight/highlight.pack.js"
+      - unless page.lib? :'-highlight'
+        script src="/js/highlight/highlight.pack.js"
 
       - if page.lib? :swipebox
         script src="/js/ios-orientationchange-fix.js"
@@ -117,6 +121,12 @@ html(lang="en" class="no-js")
       - if page.lib? :textillate
         script src="/js/jquery.lettering-0.6.1.min.js"
         script src="/js/jquery.textillate.js"
+
+      - if page.lib? :typed
+        script src="/js/typed.js"
+
+      - if page.lib? :prism
+        script src="/js/prism.js"
 
       script src="/js/custom.js"
       script src="/js/script.js"
