--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -43,11 +43,9 @@ Layout: false
       .span4
         h3 We're on GitHub
         ul.star_list
-          li
-            a href="https://github.com/imazen/" github.com/ Imazen
-            |  -  
-            a href="/docs/contribute" how to access imazen/resizer
-          li: a href="https://github.com/nathanaeljones/" github.com/ Nathanael Jones
+          li: a href="https://github.com/imazen/resizer" github.com/imazen/resizer
+          li: a href="https://github.com/imazen" github.com/imazen
+          li: a href="https://github.com/nathanaeljones" github.com/nathanaeljones
 
 
         h3 You're our sales team
@@ -77,7 +75,7 @@ Layout: false
 
           For support requests, [visit our support page, which explains how to generate a diagnostics page and get free support on Stack Overflow](/support). 
 
-          We provide free support for all bug-related requests, and [**offer a $5-$50 reward** for discovering a bug (details)](/support#bugbounty). 
+          We provide free support for all bug-related requests, and [**offer a $5-$100 reward** for discovering a bug (details)](/support#bugbounty). 
 
           *Please* reserve on-page comments for questions and clarifications *related to to the current page*; in most cases, it's *not* the appropriate place to ask for support.
 
