--- a/content/home3.slim
+++ b/content/home3.slim
@@ -62,16 +62,19 @@ h1 ASP.NET library and image server
   .container
     .span6
       p.sidespace
-        |ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments, such as white balance correction and noise removal, to cutting-edge advanced controls, such as red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds. **Video will go to the right of this paragraph. Current video is a placeholder, to help figure out size.**
+        |ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments, such as white balance correction and noise removal, to cutting-edge advanced controls, such as red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds.
       p.sidespace
         |Here's a 
         a href="/docs/basics" review of basic commands 
         |and here's a 
         a href="/docs/benefits/comprehensive" more comprehensive rundown with advanced features
         |.
-      /Remove last sentence eventually, and replace side-video with the actual video. Zebra.
     .span4.home3
-      iframe frameborder="0" height="189" src="//www.youtube.com/embed/FirWP0U3QMY" width="300"
+      video width="426" height="240" controls=""
+        source src="https://s3.amazonaws.com/resizer-web/tutorials/homepage-powtoon" type="video/mp4" 
+        | Sorry, your browser doesn't support embedded videos, 
+        | but don't worry, you can <a href="videofile.ogg">download it</a>
+        | and watch it with your favorite video player!
 
 hr
   .oddhomepageitem
