Fix broken link

--- a/content/home3.slim
+++ b/content/home3.slim
@@ -215,7 +215,7 @@ hr
             p.sidespace
               |Imageresizer is a product of Imazen LLC. Imazen specializes in developing open source software targeted at developer needs.
             .home3
-              a href="www.imazen.io" class="btn btn-primary"
+              a href="http://www.imazen.io" class="btn btn-primary"
                 | Imazen Homepage     
           .row-fluid
             h2.sidespace
