Drop a-la-carte support and expired support qualification criteria (v4)

--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -73,39 +73,14 @@ hr
   .span6
 
 
-    h2
-      | A-la-carte support
-      
-    markdown:
-      Email, phone and TeamViewer support costs $135/incident, and must be scheduled several business days in advance. A 30-minute Q&A session costs $70, but (unlike) a support incident, is time-limited and only reccommended for consulting/introduction purposes.
-
-      It is suggested that you download and install [Team Viewer](http://teamviewer.com) on the computer in question, as remote desktop access may be required to resolve your issue.
-
-      Credit cards, PayPal, and Google Checkout are accepted.
-
-    form action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=939690&amp;cl=41912&amp;ejc=2" target="ej_ejc" method="POST" accept-charset="UTF-8"
-      | Support Type
-      br
-      select name="o1"
-        option value="30 Minute QA" 30 Minute Q&A ($70)
-        option value="1 Support Incident" 1 Support Incident ($135)
-
-      br
-      input type="image" src="http://www.e-junkie.com/ej/ej_add_to_cart.gif" alt="Add to Cart" class="ec_ejc_thkbx" onClick="javascript:return EJEJC_lc(this.parentNode);"
-
-      a href="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;cl=41912&amp;ejc=2" target="ej_ejc" class="ec_ejc_thkbx" onClick="javascript:return EJEJC_lc(this);"
-        img src="http://www.e-junkie.com/ej/ej_view_cart.gif" alt="View Cart"
-
-    javascript:
-      function EJEJC_lc(th) { return false; }
-    script src='http://www.e-junkie.com/ecom/box.js'
 
     h2 You may already qualify for support if you..
 
+      / * Purchased your license before Apr. 20th, 2012
+      / * Purchased your license before Feb. 1st, 2013, and have never used the one (1) included incident.
     markdown:
       * Have [an active support contract](/support/contracts)
-      * Purchased your license before Apr. 20th, 2012
-      * Purchased your license before Feb. 1st, 2013, and have never used the one (1) included incident.
+
       * Are an open-source developer leveraging the ImageResizing.NET project in another open-source project
       * Have blogged about the project and referred at least 300 visitors
 
