--- a/content/home3.slim
+++ b/content/home3.slim
@@ -93,21 +93,18 @@ h1 ASP.NET library and image server
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
     |What We Do
   .container
+    .span3.home3
+      iframe height="252" width="400"src="//www.youtube.com/embed/GEA3uduWylk"
+    .span3
     .span6
-      p.sidespace
+      p style= "margin-left: 60px; margin-right:30px"
         |ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments, such as white balance correction and noise removal, to cutting-edge advanced controls, such as red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds.
-      p.sidespace
+      p style= "margin-left: 60px; margin-right:30px"
         |Here's a 
         a href="/docs/basics" review of basic commands 
         |and here's a 
         a href="/docs/benefits/comprehensive" more comprehensive rundown with advanced features
         |.
-    .span4.home3
-      video width="426" height="240" controls=""
-        source src="https://s3.amazonaws.com/resizer-web/tutorials/homepage-powtoon" type="video/mp4" 
-        | Sorry, your browser doesn't support embedded videos, 
-        | but don't worry, you can <a href="videofile.ogg">download it</a>
-        | and watch it with your favorite video player!
 
 hr
   .oddhomepageitem
