Fixed alignment problem on Download page

--- a/content/download.slim
+++ b/content/download.slim
@@ -5,7 +5,7 @@ Icon: download-alt
 
 h1 Download ImageResizer
 
-.title
+.titledownload
   h1
     | Step 1: Download 
     = releases.first.heading
@@ -48,7 +48,7 @@ h1 Download ImageResizer
         |Nuget Installation Instructions     
   .span2
 
-.title
+.titledownload
   h1
    |Step 2: Get a License
 .row
@@ -64,7 +64,7 @@ h1 Download ImageResizer
       a href="/license-questions" Answer a few questions 
       | and we'll find the license that's right for you.
   .span2
-.title
+.titledownload
   h1
     |Step 3: Enjoy ImageResizer
 .row
