Created a class to fix alignment on download page.

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -386,3 +386,14 @@ ul.code{
   50% { opacity:0; }
   100% { opacity:1; }
 }
+
+.titledownload {
+  border-bottom: 3px double #f6f6f6;
+  margin-bottom: 10px;
+}
+.titledownload h1 {
+  border-bottom: 5px solid @o-accent-color !important;
+  margin-bottom: -4px !important;
+  display: inline-block !important;
+  margin-right:15px !important;
+}
