Made a few changes for the support page

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -391,9 +391,13 @@ ul.code{
   border-bottom: 3px double #f6f6f6;
   margin-bottom: 10px;
 }
-.titledownload h1 {
+.titledownload h1, .titledownlad h2 {
   border-bottom: 5px solid @o-accent-color !important;
   margin-bottom: -4px !important;
   display: inline-block !important;
   margin-right:15px !important;
+}
+ul.starlist.support {
+  list-style: inside;
+  margin: 10px;
 }
