Made all stats-bar items clickable. Tried to be consistent with other scrollovers and put them in an icon box, but it screwed up the spacing too much.

--- a/content/home3.slim
+++ b/content/home3.slim
@@ -60,34 +60,41 @@ h1 ASP.NET library and image server
       a href="download" class="btn btn-buynow" style="margin:6px"
         | Get ImageResizer Now
 
-.home3.statsbar
-  .container
+.statsbar.home3
+  .container 
     .row-fluid
       .span3
-
-        p.statsnumber
-          i.icon-white.icon-cloud-download
-          |  340,000+
-        p
-          |NuGet downloads of ImageResizer
+        a.block.statsbar href="http://www.nuget.org/packages/ImageResizer/"
+          p
+            i.icon-white.icon-cloud-download.statsnumber
+             |  340,000
+          p
+            |NuGet downloads of ImageResizer
+          .clear
       .span3
-        p.statsnumber
-          i.icon-white.icon-globe 
-          |  45
-        p
-          |Countries represented in our client base
+        a.block.statsbar href="/docs/benefits/customers"
+          p
+            i.icon-white.icon-globe.statsnumber
+              |  45
+          p
+            |Countries represented in our client base
+          .clear
       .span3
-        p.statsnumber
-          i.icon-white.icon-github    
-          |  1,600+
-        p
-          |Commits on Github. $5-100 bug bounty
+        a.block.statsbar href="https://github.com/imazen/resizer"
+          p
+            i.icon-white.icon-github.statsnumber  
+              |  1,600
+          p
+            |Commits on Github. $5-100 bug bounty
+          .clear
       .span3
-        p.statsnumber
-          i.icon-white.icon-calendar
-          |  24/7
-        p.rightside
-          |Support available
+        a.block.statsbar href="/support"
+          p
+            i.icon-white.icon-calendar.statsnumber
+             |  24/7
+          p
+            |Support available
+          .clear
 
 .row-fluid
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
@@ -223,7 +230,7 @@ hr
           .span2
   .container.home3
     h1.headerpadding.home3
-      |Other Open-Source Products from Imazen
+      |More Open-Source Products from Imazen
     .row-fluid.bottompadding
       .span4
         h2.sidespace
