Made a few adjustments for the statsbar

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -238,14 +238,13 @@ span.imagespacer{
 }
 .statsbar{
   background-color: #00aec4;
-  color: #FFF;
+  color: #fff;
   vertical-align: middle;
   font-size: 10pt;
-  padding-top: 15px;
   margin-top:1em;
 }
 .statsnumber{
-  font-size: 28pt;
+  font-size: 24pt;
 }
 .headerpadding{
   padding-top: 25px;
