Added bug bounty information to the community page

--- a/content/docs/community.slim
+++ b/content/docs/community.slim
@@ -84,7 +84,7 @@ h1 ImageResizer Community
       We strongly suggest [reading the support page](/support) before posting, as nearly all common mistakes are explained there.
 
 .row
-  .span6
+  .span4
     .title: h2 Popular Community Articles
     markdown:
 
@@ -98,7 +98,7 @@ h1 ImageResizer Community
       * [Nathanael Jones: 29 image resizing pitfalls](http://www.nathanaeljones.com/blog/2009/20-image-resizing-pitfalls)
 
 
-  .span6
+  .span4
 
     .title: h2 More articles
     markdown:
@@ -113,6 +113,13 @@ h1 ImageResizer Community
       * [uBootstrap for Umbraco](http://our.umbraco.org/projects/starter-kits/ubootstrap) now [includes ImageResizer to handle responsive imaging needs](http://jlusar.es/ubootstrap-fluent-layout)
 
       There are also over [70 Stack Overflow posts about ImageResizer](http://stackoverflow.com/questions/tagged/imageresizer).
+
+  .span4
+    .title: h2 Bug Bounty
+    markdown:
+      To encourage everyone to actively look for bugs and report them, I'm currently offering a $5-$100 bounty per bug you find and report before anyone else! Most bug reports are firmly in the $5 category, but a security hole or memory leak could net you $100 for the one bug. Payments sent via PayPal. All class libraries whose names start with ImageResizer are eligible. Email bug reports to support@imageresizing.net. Only the latest version of the product is eligible.
+
+      **Before you submit a bug**, *please* check [Github](https://github.com/imazen/resizer) for issues first. We also request that unless the bug is security-related, please submit all bug reports on Github.
 
 
 
