--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -32,19 +32,20 @@ h1 Support
       |Step 3: Make your question count.
     p
       markdown:
-        The more specific you are, the more likely it is we can diagnose your problem quickly, both on email and Stackoverflow free support. **Here is what we absolutely need before we can help you.**
+        The more specific you are, the more likely it is we can diagnose your problem quickly, both on StackOverflow free support and email. **Here is what we absolutely need before we can help you.**
 
-        ####*Email support@imageresizing.net*
-
-        1. The [diagnostics page output](/plugins/diagnostics).
-        2. If there is an error message, [the precise error message you get when you put the image URL directly into the address bar](/docs/geterror).
-
-        ####*Stackoverflow*
+        ####*StackOverflow*
 
         1. Your question must carry the ["ImageResizer" tag](http://stackoverflow.com/questions/tagged/imageresizer) so we can find it.
         2. The question [includes a gist](https://gist.github.com/) with the diagnostics page output.
         3. The question is about the URL API and [follows best praticies](/docs/best-practices).
         4. The question is detailed enough to answer and shows some diagnostic effort (Just "It's not working" probably won't get you the answer you need)
+
+        ####*Email support@imageresizing.net*
+
+        1. The [diagnostics page output](/plugins/diagnostics).
+        2. If there is an error message, [the precise error message you get when you put the image URL directly into the address bar](/docs/geterror).
+        3. The name of the company your support contract is registered under.
 
         We typically answer Stack Overflow questions within 1-2 weeks. If we take the time to provide a good answer to your question, please be courteous; mark it as the answer and vote it up. We prioritize questions from Stack Overflow users with a good reputation.
     .well
