Replaced "We have a blog!" with "News"

--- a/content/home3.slim
+++ b/content/home3.slim
@@ -193,7 +193,7 @@ hr
       .row-fluid.bottompadding
         .span2
         .span4.tiny-news
-          h2.sidespace We Have a Blog!
+          h2.sidespace News
           - for p in index.posts[0..5]
             h3.sidespace
               a href=p.path
