Improve wording on download page -> support contracts

--- a/content/download.slim
+++ b/content/download.slim
@@ -74,14 +74,14 @@ h1 Download ImageResizer
       |We take our commitment to deliver high-quality, easy-to-use software very seriously. Here are some ways you can guarantee you're getting the most out of our product.
     ul.arrow_list
       li
-        a href="/support/contracts" Get a support contract.
-        |To make sure you're getting maximum usage and minimal misunderstanding from ImageResizer, we recommend a support contract. Some amenities include architecture planning, preventative consultation, emergency incident support, and custom development for your business's unique needs.
+        a href="/support/contracts"  Get a support contract.
+        |  Elimiate risk and get the most of out ImageResizer with support contract. Support contracts include architecture planning, preventative consultation, emergency incident support, and custom development for your business's unique needs.
       li
         a href="/docs/basics" Learn the basics. 
-        |Spend a few minutes learning the ropes before you get started making beautiful, functional, responsive websites in half the time.      
+        |  Spend a few minutes learning the ropes before you get started making beautiful, functional, responsive websites in half the time.      
       li
         a href="/docs/benefits/comprehensive" Visit our Tutorials page. 
-        |We hear 
+        |  We hear 
         em all the time 
         | from customers who never realized the sheer variety of ImageResizer's capabilities. Come and see some of ImageResizer's wide assortment of features.
       li
