Change What We Do -> Create images that impress and inspire. Make NuGet link show all ImageResizer packages.

--- a/content/home3.slim
+++ b/content/home3.slim
@@ -64,7 +64,7 @@ h1 ASP.NET library and image server
   .container 
     .row-fluid
       .span3
-        a.block.statsbar href="http://www.nuget.org/packages/ImageResizer/"
+        a.block.statsbar href="http://www.nuget.org/profiles/nathanaeljones/"
           p
             i.icon-white.icon-cloud-download.statsnumber
              |  340,000
@@ -98,7 +98,7 @@ h1 ASP.NET library and image server
 
 .row-fluid
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
-    |What We Do
+    |Create images that impress and inspire
   .container
     .span3.home3
       iframe height="252" width="400"src="//www.youtube.com/embed/GEA3uduWylk"
