--- a/content/home2.slim
+++ b/content/home2.slim
@@ -3,6 +3,7 @@ Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open S
 Libs: uservoice, plusone, -comments, bxSlider, textillate
 Aliases: )
 Layout: layout
+Flags: hidden
 
 h1 RESTful image processing
 
