Change FAQ -> Sales FAQ on /licenses

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -231,7 +231,7 @@ h1 Licenses
       [contribute]: /licenses/contribute  "Imazen Contributor Agreement"
   .span4
     markdown:
-      ## FAQ
+      ## Sales FAQ
 
     dl
       dt
