--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -417,40 +417,41 @@ ul.starlist.support {
   height: 100%; 
 }
 
-p.licensepage {
+p.license {
   color: #ffffff;
-  padding: 30px;
+  padding-top: 20px;
+  padding-bottom: 100px;
   font-size: 24pt;
   line-height: 30px;
   text-align: center;
   border-radius: 8px;
   font-style: italic;
 }
-.testbutton{
-  border-color: #c5c5c5;
-  border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
-  background-color: #faa732;
+.licensepar {
   color: #ffffff;
-  background-image: -moz-linear-gradient(top, #fbb450, #fbb450);
-  background-image: -ms-linear-gradient(top, #fbb450, #fbb450);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#fbb450));
-  background-image: -webkit-linear-gradient(top, #fbb450, #fbb450);
-  background-image: -o-linear-gradient(top, #fbb450, #fbb450);
-  background-image: linear-gradient(top, #fbb450, #fbb450);
-  background-repeat: repeat-x;
-  filter: ~"progid:DXImageTransform.Microsoft.gradient(startColorstr='#'fbb450, endColorstr='#'fbb450, GradientType=0)";
-  border-color: #f89406 #f89406 #ad6704;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  filter: ~"progid:DXImageTransform.Microsoft.gradient(enabled = false)";
-  padding: 30px;
-  font-size: 24pt;
-  line-height: 30px;
-  font-style: italic;
+  font-size:11pt;
+  margin-top: -110px;
+  text-align: center;
+  margin-bottom: 100px;
 }
 
-
-
-
+p.licensetrial {
+  color: #ffffff;
+  padding-top: 20px;
+  padding-bottom: 90px;
+  font-size: 24pt;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 8px;
+  font-style: italic;
+}
+.licensepartrial {
+  color: #ffffff;
+  font-size:11pt;
+  margin-top: -100px;
+  text-align: center;
+  margin-bottom: 100px;
+}
 
 
 
